fix: improve title spacing

--- a/src/styles/bulmaOverrides.scss
+++ b/src/styles/bulmaOverrides.scss
@@ -1,3 +1,9 @@
 $primary: #8c67ef;
 
 $link: $primary;
+
+section.section {
+  @include from($desktop) {
+    padding-top: 0;
+  }
+}
